--- a/css/styles.css
+++ b/css/styles.css
@@ -767,15 +767,18 @@ body {
 
   background-color: var(--modal-backdrop-color);
   opacity: 1;
-  transition: opacity 250ms var(--timing-function);
+  visibility: visible;
+  transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
+  /* opacity: 0; */
   pointer-events: none;
+  visibility: hidden;
 }
 
 .backdrop.is-hidden .modal-window {
+  opacity: 0;
   transform: translate(-50%, -50%) scale(1.1);
 }
 
@@ -792,8 +795,9 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  opacity: 1;
 
-  transition: transform 250ms var(--timing-function);
+  transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
 }
 
 .modal-button {
